Unido prodcutos con admin

--- a/public/css/generales.css
+++ b/public/css/generales.css
@@ -1,4 +1,4 @@
-@import url('normalize.css');
+/* @import url('normalize.css'); */
 
 @import url('https://fonts.googleapis.com/css?family=Rubik:400,700');
 
