--- a/public/css/products.css
+++ b/public/css/products.css
@@ -1,6 +1,6 @@
-@import url('normalize.css');
+/* @import url('normalize.css');
 /*-- responsive --*/
-.categoriasProductos{
+/* .categoriasProductos{
   display: none;
 }
 
@@ -109,7 +109,7 @@
     border-top: solid 1px #d5d5d5;
     border-bottom: solid 1px #d5d5d5;
   }
-
+ */
 
 
 
@@ -124,4 +124,117 @@
   box-shadow: 0 0 5px #303c42;
   padding: 2% 8% 2% 8%;
   color: #303c42;
+} */
+
+
+/* TOMA 2 */
+
+@import url('normalize.css');
+/-- Responsive --/
+.categoriasProductos{
+ display: none;
 }
+.cont1, .cont2{
+ margin: 0 auto;
+ text-align: center;
+}
+.container-productos img{
+ width: 40%;
+ justify-content: center;
+}
+.titulo-productos{
+ font-size: 200%;
+ text-align: center;
+ background-image: linear-gradient(to right, #FFBA51 , #905802);
+ padding: 3%;
+ color: #fff;
+}
+.caja1, .caja2, .caja3, .caja4{
+ margin: 0 auto;
+ margin-top: 5%;
+ margin-bottom: 5%;
+ width: 80%;
+ color: #303c42;
+}
+.h3{
+ margin: 0 auto;
+ width: 80%;
+ background-color: #303c42;
+ color: #fff;
+ padding: 2%;
+}
+.comprar{
+ background-image: linear-gradient(to right, #FFBA51 , #905802);
+ border: none;
+ padding: 4%;
+ color: #fff;
+}
+@media(min-width: 600px){
+ .categoriasProductos{
+   display: none;
+ }
+ .cont1, .cont2{
+   display: flex;
+   flex-wrap: wrap;
+ }
+ .caja1, .caja2, .caja3, .caja4{
+   background-color: #fff;
+   width: 40%;
+   border-radius: 4%;
+   box-shadow: 0 0 5px #303c42;
+   padding: 2% 8% 2% 8%;
+   color: #303c42;
+ }
+}
+@media(min-width: 900px){
+ .vinos-productos{
+   display: flex;
+   flex-wrap: wrap;
+ }
+ .vino{
+   width: 20%;
+   margin: 5%;
+   padding: 5%;
+   padding-top: 3%;
+   padding-bottom: 3%;
+   background-color: #d6d6d6;
+   box-shadow: 10px 5px 5px grey;
+ }
+ .vino img{
+   width: 80px;
+ }
+ /* .botella{
+   justify-content: center;
+   width: 80%;
+ } */
+ .container-productos{
+   background-image: url("../images/bg-productos-opacidad.png");
+   width: 100%;
+   display: flex;
+   flex-direction: row;
+ }
+ .filtro-productos{
+   background-color: grey;
+   width: 25%;
+   height: 100%;
+ }
+ .categoriasProductos{
+   display: block;
+   background-color: #f4f4f4;
+   padding: 2%;
+   padding-top: 5%;
+   margin-right: 5%;
+   width: 25%;
+   border-right: solid 2px #d5d5d5;
+ }
+ .categoriasProductos li{
+   display: block;
+   padding-top: 5%;
+   padding-bottom: 5%;
+   border-top: solid 1px #d5d5d5;
+   border-bottom: solid 1px #d5d5d5;
+ }
+ /show products/
+ .show{
+   width: 100%;
+ }
